@@ -1,11 +1,16 @@
 # Generated by roxygen2: do not edit by hand
 
+S3method(logml,bridge)
+S3method(logml,bridge_list)
+S3method(post_prob,bridge)
+S3method(post_prob,default)
 S3method(print,bridge)
 S3method(print,bridge_list)
 export(bridge_sampler)
 export(compute_bf)
-export(compute_post_prob)
 export(error_measures)
+export(logml)
+export(post_prob)
 export(stan_bridge_sampler)
 import(Brobdingnag)
 import(rstan)
