@@ -178,11 +178,11 @@ BF01 <- compute_bf(H0.bridge, H1.bridge)
 print(BF01)
 
 # compute posterior model probabilities (assuming equal prior model probabilities)
-post1 <- compute_post_prob(H0.bridge, H1.bridge)
+post1 <- post_prob(H0.bridge, H1.bridge)
 print(post1)
 
 # compute posterior model probabilities (using user-specified prior model probabilities)
-post2 <- compute_post_prob(H0.bridge, H1.bridge, prior_prob = c(.6, .4))
+post2 <- post_prob(H0.bridge, H1.bridge, prior_prob = c(.6, .4))
 print(post2)
 
 }
